# disk_cache_macro

./: Cargo.toml  out.txt  readme.md
src/: lib.rs
tests/: tests.rs
