[package]
name = "disk_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.39"
serde_json = "1.0.134"

[lib]
proc-macro = true

